@@ -745,7 +745,7 @@ group {
       part { name: "e.text.name";
          type: TEXT;
          effect: SOFT_SHADOW;
-         mouse_events: 0;
+         mouse_events: 1;
          description { state: "default" 0.0;
             rel1 {
                to_y: "location";
@@ -758,8 +758,9 @@ group {
                offset: -1 0;
             }
             align: 0.5 0.0;
-            color: 255 255 255 255;
-            color3: 0 0 0 32;
+            visible: 0;
+            color: 255 255 255 0;
+            color3: 0 0 0 0;
             text {
                font: "Sans:style=Bold,Edje-Vera-Bold";
                size: 14;
@@ -767,9 +768,37 @@ group {
                align: 0.5 0.0;
             }
          }
+         description { state: "visible" 0.0;
+            inherit: "default" 0.0;
+            visible: 1;
+            color: 255 255 255 255;
+            color3: 0 0 0 32;
+         }
       }
    }
    programs { /* programs - where we react to events/signals */
+      program {
+         name: "appear";
+         signal: "e,state,active";
+         source: "e";
+         action: STATE_SET "visible" 0.0;
+         transition: DECELERATE 0.5;
+         target: "e.text.name";
+      }
+      program {
+         name: "disappear";
+         signal: "e,state,passive";
+         source: "e";
+         action: STATE_SET "default" 0.0;
+         transition: DECELERATE 0.5;
+         target: "e.text.name";
+      }
+      program {
+         name: "menu_activate";
+         signal: "mouse,down,*";
+         source: "e.text.name";
+         action, SIGNAL_EMIT "MENU_ACTIVATE" "e.text.name"; 
+      }
    }
 }
 
